--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,8 @@ dependencies = [
     "uvicorn[standard] (>=0.34.3,<0.35.0)",
     "pymongo (>=4.13.1,<5.0.0)",
     "motor (>=3.3.1,<4.0.0)",
-    "python-dotenv (>=1.1.0,<2.0.0)"
+    "python-dotenv (>=1.1.0,<2.0.0)",
+    "bson (>=0.5.10,<0.6.0)"
 ]
 package-mode = false
 
