--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,10 +12,9 @@ dependencies = [
     "pydantic-settings (>=2.3.0,<3.0.0)",
     "fastapi (>=0.115.12,<0.116.0)",
     "uvicorn[standard] (>=0.34.3,<0.35.0)",
-    "pymongo (>=4.13.1,<5.0.0)",
-    "motor (>=3.3.1,<4.0.0)",
     "python-dotenv (>=1.1.0,<2.0.0)",
-    "bson (>=0.5.10,<0.6.0)"
+    "pymongo (>=4.13.1,<5.0.0)",
+    "motor (>=3.7.1,<4.0.0)",
 ]
 package-mode = false
 
@@ -29,4 +28,7 @@ black = "^25.1.0"
 isort = "^6.0.1"
 mypy = "^1.16.0"
 pytest = "^8.4.0"
+pytest-asyncio = "^1.0.0"
+httpx = "^0.28.1"
+pytest-cov = "^6.2.1"
 
